traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:5: error: value unary_! is not a member of Unit
  while(!fin())
        ^TraversalByColumn:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else {return false}} 
                                                                                     ^TraversalByColumn:8: warning: enclosing method fin has result type Unit: return value discarded
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else {return false}} 
                                                                              ^TraversalByColumn:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else {return false}} 
                                                                                                        ^TraversalByColumn:8: warning: enclosing method fin has result type Unit: return value discarded
def fin(){if (getX()==(getMondeLargeur()-1) && getY()==(getMondeHauteur()-1)){return true};else {return false}} 
                                                                                                 ^